# mindscar

./: .gitignore  readme.txt  todo
common/: context.py  multiprocess_main.py  pushd.py  repl.py  subst.py  supervisor.py
labelmaker/: spec
labelmaker/nix/: default.nix
labelmaker/src/: lib.py  pyproject.toml
labelmaker/src/sql/: labelsheet-specs.sql  note.txt  sheet-usage.sql
scanflow/: gitignore  qtile.py  scantool.py
scanflow/nix/: default.nix
scanflow/src/: dmserver.py  document.py  feh.py  lib.py  pyproject.toml  repo.py  scanner.py
