[tool.poetry]
name = "labelmaker"
version = "0.1.0"
description = "I use this to manage my paper documents"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pylabels = "^1.2.1"
reportlab = "^3.5.42"
pudb = "^2019.2"
parsy = "^1.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
